Korrektur für Katja Part 1, Tabellen noch

--- a/v606/content/diskussion.tex
+++ b/v606/content/diskussion.tex
@@ -1,7 +1,14 @@
 \section{Diskussion}
 \label{sec:Diskussion}
 Bei der Analyse der Filterkurve ergab sich aus den Messwerten eine Güte $Q = \num{27.89 +- 0.06}{}$. Am Sinusgenerator wurde eine Güte $Q_\text{real} = 20$
-eingestellt, was bedeutet, dass das Messergebnis um $\symup{\Delta}(Q) = \qty{39.45}{\percent}$ von dem realen Wert abweicht. Jedoch modelliert -- wie in 
+eingestellt, was bedeutet, dass das Messergebnis um $\symup{\Delta}(Q) = \qty{39.45}{\percent}$ von dem realen Wert abweicht.
+Die relative Abweichung eines Messwertes $x$ zu einem Theoriewert $x^*$ wird nach 
+\begin{equation}
+  \label{eqn:Delta_rel}
+  \symup{\Delta}_\text{rel}(x) = \frac{|x^* - x|}{x^*}
+\end{equation}
+berechnet.
+Jedoch modelliert -- wie in 
 \autoref{fig:plot} zu erkennen ist -- der Fit, mit welchem die Werte der Frequenzen $\nu_-$, $\nu_+$ und $\nu_0$ ermittelt wurden, nicht ideal den Verlauf
 der Messwerte. Dies liegt der Tatsache zu Grunde, dass die Filterkurve einen sehr starken Anstieg verzeichnet und nicht genügend Messwerte in diesem Bereich
 genommen werden konnten, obwohl bereits eine sehr kleine Schrittweite im Bereich des Maximums gewählt wurde. Möglicherweise könnte ein besseres Ergebnis erzielt 
