--- a/v606/content/auswertung.tex
+++ b/v606/content/auswertung.tex
@@ -1,12 +1,7 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 Die in diesem Kapitel erwähnten Fehler genügen der Gaußschen Fehlerfortpflanzung beziehungsweise dem Standardfehler des Mittelwertes und wurden mit \textit{uncertainties}
-\cite{uncertainties} in \textit{Python} berechnet. Die relative Abweichung eines Messwertes $x$ zu einem Theoriewert $x^*$ wird nach 
-\begin{equation}
-  \label{eqn:Delta_rel}
-  \symup{\Delta}_\text{rel}(x) = \frac{|x^* - x|}{x^*}
-\end{equation}
-berechnet.
+\cite{uncertainties} in \textit{Python} berechnet.
 
 \subsection{Filterkurve des Selektivverstärkers}
 \label{subsec:A_Filterkurve}
@@ -30,7 +25,7 @@ Der Parameter $b$ dient dabei zur Verschiebung der Glockenkurve entlang der $x$-
 Durch eine Regression mittels \textit{scipy} \cite{scipy} ergeben sich die Parameter
 \begin{align}
   \label{eqn:Parameter}
-  \alpha &= \qty{2.28 +- 0.3}{\per\kilo\hertz\squared} & b &= \qty{21.75 +- 0.04}{\kilo\hertz}.
+  \alpha &= \qty{2.28 +- 0.3}{\per\kilo\hertz\squared} &&\text{und} & b &= \qty{21.75 +- 0.04}{\kilo\hertz}.
 \end{align}
 Es folgt sofort $\nu_0 = b = \qty{21.75 +- 0.04}{\kilo\hertz}$, die Frequenzen $\nu_-$ und $\nu_+$ können als Schnittpunkte der Funktion mit der Geraden $y = 1/\sqrt{2}$
 grafisch ermittel werden. Dieses Vorgehen kann ebenfalls \autoref{fig:plot} entnommen werden. 
@@ -38,9 +33,8 @@ Es ergeben sich die Frequenzen $\nu_- = \qty{21.36}{\kilo\hertz}$ und $\nu_+ = \
 Durch Einsetzen in \autoref{eqn:Guete} kann der Wert der Güte berechnet werden.
 Unter Beachtung der Gaußschen Fehlerfortpflanzung folgt
 \begin{align*}
-  Q &= \num{27.89 +- 0.06}, & \symup{\Delta}(Q) = \qty{39.45}{\percent}.
+  Q &= \num{27.89 +- 0.06}.
 \end{align*}
-Die relative Abweichung berechnet sich nach \autoref{eqn:Delta_rel}. Als Theoriewert der Güte wird der am Sinusgenerator einstellbare Wert $Q_\text{real} = 20$ verwendet.
 
 \subsection{Bestimmung der Suszeptibilitäten}
 \label{subsec:A_Suszep}
@@ -60,7 +54,7 @@ im Anhang entnommen werden kann, ergeben sich die Suszeptibilitäten der Proben.
     \midrule
       {$\symup{Dy}_2\symup{O}_3$}                 & 0.0198 & 0.0224 & 0.0235 & 0.0219 & {$\pm$} & 0.0016 \\
       {$\symup{Gd}_2\symup{O}_3$}                 & 0.0268 & 0.0303 & 0.0319 & 0.0297 & {$\pm$} & 0.0021 \\
-      {$\symup{C}_6\symup{O}_{12}\symup{Pr}_3$}   & 0.0042 & 0.0048 & 0.0050 & 0.0047 & {$\pm$} & 0.0003 \\
+      {$\symup{C}_6\symup{O}_{12}\symup{Pr}_2$}   & 0.0042 & 0.0048 & 0.0050 & 0.0047 & {$\pm$} & 0.0003 \\
     \bottomrule
       {Aus Spannungen} & & & & & \\
     \bottomrule 
@@ -77,7 +71,7 @@ Mit diesen Werten ergeben sich dann erneut experimentelle Werte der Suszeptibili
 Theoriewerte der Suszeptibilitäten lassen sich nach Formel \eqref{eqn:chi1} berechnen. Die Theoriewerte unterliegen allerdings der Annahme, dass die Proben bei konstanter 
 Raumtemperatur untersucht wurden. Daher wurde eine Raumtemperatur von $T = \qty{293.15}{\kelvin}$ verwendet. Außerdem werden die Quantenzahlen $J$, $S$ und $L$ benötigt. Diese
 können aus den Hundschen Regeln bestimmt werden. Für $\symup{Dy}_2\symup{O}_3$ lauten diese $J = 7.5$, $S = 2.5$ und $L = 5$. $\symup{Gd}_2\symup{O}_3$ hat die Quantenzahlen
-$J = 3.5$, $S = 3.5$ und $L = 0$. Da zu $\symup{C}_6\symup{O}_{12}\symup{Pr}_3$ keine Dichte und keine Quantenzahlen ermittelt werden konnten, 
+$J = 3.5$, $S = 3.5$ und $L = 0$. Da zu $\symup{C}_6\symup{O}_{12}\symup{Pr}_2$ keine Dichte in sämtlichen frei zugänglichen Stoffdatenbanken zu finden ist, 
 konnten auch keine Theoriewerte bestimmt werden.
 Mit dem Bohrschen Magneton und dem \textit{Landé-Faktor}, welche einfach von dem bekannten Quantenzahlen abhängt, können dann die theoretischen Suszeptibilitäten der Proben
 bestimmt werden. Die Theoriewerte werden in \autoref{tab:Chi_abwU} dargestellt. Aus diesen wird dann in derselben Tabelle die Abweichung des experimentellen
