--- a/v606/content/durchfuehrung.tex
+++ b/v606/content/durchfuehrung.tex
@@ -7,7 +7,7 @@ bestimmmten Frequenzbereich an Wechselspannungen durchlässt, muss die Frequenz 
 \begin{figure}
     \centering
     \includegraphics[width = .8\textwidth]{content/Schaltung2.png}
-    \caption{Blockschaltplan des Versuchaufbaus. \cite{v606}}
+    \caption{Blockschaltplan des Versuchaufbaus \cite{v606}.}
     \label{fig:Schaltung2}
 \end{figure}
 
