--- a/v503/content/theorie.tex
+++ b/v503/content/theorie.tex
@@ -25,7 +25,7 @@ Nach kurzer Zeit stellt sich ein Kräftegleichgewicht ein, wodurch sich die Trö
 Bei abgeschalteten elektrischen Feld bewegen sich die Öltröpfchen dann mit der Geschwindigkeit $v_0$ und erhalten durch den Auftrieb der Luft den Radius
 \begin{equation}
     \label{eqn:Radius}
-    r = \sqrt{\frac{9 \eta_\text{L}v_0}{2g(\rho_\text{Oel}- \rho_\text{L})}}.
+    r = \sqrt{\frac{9 \eta_\text{L}v_0}{2g(\rho_\text{Oel}- \rho_\text{L})}} = \sqrt{\frac{9 \eta_\text{L}(v_\text{ab} - v_\text{auf})}{4g(\rho_\text{Oel}- \rho_\text{L})}}.
 \end{equation}
 Das Kräftegleichgewicht führt in diesem Fall zu der Gleichung
 \begin{equation*}
