--- a/v503/content/auswertung.tex
+++ b/v503/content/auswertung.tex
@@ -20,36 +20,37 @@ sind in der folgenden \autoref{tab:Geschwindigkeiten} dargestellt. Ebenfalls wir
     \caption{Geschwindigkeiten der Öltröpfchen und Abweichung zur Idealbedingung $2v_0 = v_\text{ab}- v_\text{auf}$. Zwecks Übersichtlichkeit wird auf die Angabe der 
     Messunsicherheiten verzichtet. $N$: Nummer des Öltröpfchens.}
     \label{tab:Geschwindigkeiten}
-    \begin{tabular}{c l S[table-format = 2.2] S S S[table-format = 1.2] S[table-format = 2.2]}
+    \begin{tabular}{c l S[table-format = 2.2] S S S[table-format = 1.2] S[table-format = 2.2] S[table-format = 1.3]}
       \toprule
         {} & {$N$} & {$v_\text{auf} \mathbin{/} 10^{-5} \unit{\metre\per\second}$} & {$v_\text{ab} \mathbin{/} 10^{-5} \unit{\metre\per\second}$} &% 
-        {$v_0 \mathbin{/} 10^{-5} \unit{\metre\per\second}$} & {$\symup{\Delta} v_0 \mathbin{/} \unit{\percent}$} \\
+        {$v_0 \mathbin{/} 10^{-5} \unit{\metre\per\second}$} & {$\symup{\Delta} v_0 \mathbin{/} \unit{\percent}$} &%
+        {$\eta_\text{L} \mathbin{/} 10^{-5} \unit{\pascal\second}$}\\
         \midrule
-        {$\qty{175}{\volt}:$} &  {1} & 3.42  &  8.03 & 1.59 & 45.05 \\
-        {                   } &  {2} & 11.80 & 12.19 &      &       \\
-        {                   } &  {3} &  5.04 &  6.44 &      &       \\
-        {                   } &  {4} & 13.36 & 19.17 &      &       \\
-        {                   } &  {5} &  7.01 &  8.83 & 1.79 & 49.14 \\
-        {$\qty{200}{\volt}:$} &  {6} &  9.68 & 10.83 & 0.82 & 29.84 \\
-        {                   } &  {7} & 15.34 & 16.56 & 0.60 &  0.50 \\
-        {                   } &  {8} &  2.12 &  4.84 & 1.89 & 28.03 \\
-        {                   } &  {9} &  1.60 &  5.75 & 2.50 & 17.07 \\
-        {                   } & {10} &  7.17 &  9.46 & 1.98 & 41.94 \\ 
-        {$\qty{225}{\volt}:$} & {11} &  4.57 &  8.57 & 2.16 &  7.29 \\ 
-        {                   } & {12} &  4.12 &  8.26 & 1.61 & 28.85 \\
-        {                   } & {13} &  9.06 & 14.15 & 3.46 & 26.54 \\
-        {                   } & {14} & 11.97 & 15.08 & 1.71 &  8.80 \\
-        {                   } & {15} &  4.03 & 11.39 & 3.35 &  9.98 \\
-        {$\qty{250}{\volt}:$} & {16} &  2.98 &  9.49 & 3.07 &  6.00 \\
-        {                   } & {17} &  8.75 & 15.98 & 3.38 &  6.83 \\
-        {                   } & {18} & 14.70 & 16.32 & 1.04 & 22.06 \\
-        {                   } & {19} &  5.09 & 11.97 & 3.67 &  6.31 \\
-        {                   } & {20} &  3.98 &  9.22 & 1.81 & 45.18 \\
-        {$\qty{275}{\volt}:$} & {21} &  4.08 & 12.11 & 3.48 & 15.19 \\
-        {                   } & {22} & 15.21 & 19.06 & 2.29 & 15.73 \\
-        {                   } & {23} &  9.51 & 18.61 & 4.94 &  7.72 \\
-        {                   } & {24} & 13.17 & 27.85 & 7.90 &  7.05 \\
-        {                   } & {25} &  8.72 & 15.08 & 2.61 & 21.90 \\
+        {$\qty{175}{\volt}:$}          &  {1} & 3.42  &  8.03 & 1.59 & 45.05 & 1.833 \\
+        {$R: \qty{2.2}{\mega\ohm}$}    &  {2} & 11.80 & 12.19 &      &       & \\
+        {$-> T = \qty{22}{\celsius}$} &   {3} &  5.04 &  6.44 &      &       & \\
+        {                   } &           {4} & 13.36 & 19.17 &      &       & \\
+        {$T = \qty{30}{\celsius}$}     &  {5} &  7.01 &  8.83 & 1.79 & 49.14 & 1.872 \\
+        {$\qty{200}{\volt}:$} &           {6} &  9.68 & 10.83 & 0.82 & 29.84 & 1.833 \\
+         {$R: \qty{2.2}{\mega\ohm}$}   &  {7} & 15.34 & 16.56 & 0.60 &  0.50 & \\
+         {$-> T = \qty{22}{\celsius}$}&   {8} &  2.12 &  4.84 & 1.89 & 28.03 & \\
+        {$T = \qty{29}{\celsius}$}     &  {9} &  1.60 &  5.75 & 2.50 & 17.07 & 1.866 \\
+        {                   } &          {10} &  7.17 &  9.46 & 1.98 & 41.94 & \\ 
+        {$\qty{225}{\volt}:$} &          {11} &  4.57 &  8.57 & 2.16 &  7.29 & 1.867 \\ 
+        $T = \qty{27}{\celsius}$ &       {12} &  4.12 &  8.26 & 1.61 & 28.85 & \\
+        {                   } &          {13} &  9.06 & 14.15 & 3.46 & 26.54 & \\
+        {                   } &          {14} & 11.97 & 15.08 & 1.71 &  8.80 & \\
+        {                   } &          {15} &  4.03 & 11.39 & 3.35 &  9.98 & \\
+        {$\qty{250}{\volt}:$} &          {16} &  2.98 &  9.49 & 3.07 &  6.00 & 1.848 \\
+        $T = \qty{25}{\celsius}$ &       {17} &  8.75 & 15.98 & 3.38 &  6.83 & \\
+        {                   } &          {18} & 14.70 & 16.32 & 1.04 & 22.06 & \\
+        {                   } &          {19} &  5.09 & 11.97 & 3.67 &  6.31 & \\
+        {                   } &          {20} &  3.98 &  9.22 & 1.81 & 45.18 & \\
+        {$\qty{275}{\volt}:$} &          {21} &  4.08 & 12.11 & 3.48 & 15.19 & 1.872 \\
+        {$T = \qty{30}{\celsius}$} &     {22} & 15.21 & 19.06 & 2.29 & 15.73 & \\
+        {                   } &          {23} &  9.51 & 18.61 & 4.94 &  7.72 & \\
+        {                   } &          {24} & 13.17 & 27.85 & 7.90 &  7.05 & \\
+        {                   } &          {25} &  8.72 & 15.08 & 2.61 & 21.90 & \\
       \bottomrule
     \end{tabular}
   \end{table}
