--- a/lit.bib
+++ b/lit.bib
@@ -147,3 +147,9 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933354/mod_resource/content/2/V504.pdf},
 }
 
+@online{v401,
+	title        = {V401 - Das Michelson-Interferometer},
+	organization = {TU Dortmund},
+	urldate      = {2022-05-17},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933350/mod_resource/content/2/V401.pdf},
+}
