--- a/v503/content/anhang.tex
+++ b/v503/content/anhang.tex
@@ -1,19 +1,6 @@
 \newpage
 
-\Large\textbf{Anhang}
-
-
-%\begin{figure}
-%    \centering
-%    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
-%\end{figure}
-%
-%\newpage
-%
-%\begin{figure}
-%    \centering
-%    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
-%\end{figure}
+\section*{Anhang}
 
 \begin{figure}
     \centering
@@ -27,4 +14,18 @@
     \includegraphics[width = 0.6\textwidth]{content/Thermowiderstand.PNG}
     \caption{Tabelle mit zur Bestimmung der Lufttemperatur in Abhängigkeit des Thermowiderstandes. \cite{v503}}
     \label{fig:Temperatur}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+    \centering
+    \includepdf[page= 1, scale=0.75]{content/MessdatenV503.pdf}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+    \centering
+    \includepdf[page= 2, scale=0.75]{content/MessdatenV503.pdf}
 \end{figure}
