--- a/v401/content/theorie.tex
+++ b/v401/content/theorie.tex
@@ -1,4 +1,31 @@
+\section{Zielsetzung}
+\label{sec:Ziel}
+In diesem Versuch soll die Wellenlänge eines Lasers durch ein \textit{Michelson-Interferometer} bestimmt werden. Dazu wird die Interferenzeigenschaft von monochromatischem 
+Licht verwendet. Außerdem soll mit dem selben Laser der Brechungsindex von Luft bestimmt werden.
+
 \section{Theorie}
 \label{sec:Theorie}
+Um das Michelson-Interferometer zu verstehen, werden zunächst grundlegende Eigenschaften von Licht erläutert. Dabei wird hauptsächlich auf die Eigenschaft der Interferenz und
+der Kohärenz eingegangen. 
+\subsection{Interferenz}
+\label{subsec:Interferenz}
+Licht ist eine elektromagnetische Welle. Daher kann die Ausbreitung von Licht durch die Maxwell-Gleichungen beschrieben werden. Aus dieser Beschreibung folgt auch, dass Licht
+zu einem Teil durch ein $\vec{E}$-Feld beschrieben werden kann. Da dieses bei Licht allerdings so schwach ist, dass es nicht gemessen werden kann, muss eine andere Größe für die
+Beschreibung von Licht gefunden werden. Dazu wird die Intensität verwendet. Die Intensität folgt aus den Maxwell-Gleichungen und ist durch 
+\begin{equation*}
+    I = \text{const}\lvert \vec{E} \rvert^2
+\end{equation*}
+gegeben. 
+Nun ist Licht im Allgemeinen allerdings keine einzelne Welle, sondern eine mehrfach überlagerte Wellenkombination. Überlagerung bei elektromagnetischen Wellen bedeutet, dass 
+zwei Wellen im gleichen Raum übereinander liegen. Da die Beschreibung von Licht aus den linearen Maxwell-Differentialgleichungen folgt, gilt für Lichtwellen das Prinzip der
+Superposition. Das bedeutet, dass die $\vec{E}$-Felder der einzelnen Wellen addiert das $\vec{E}$-Feld der gesamten überlagerten Welle ergibt. Die Intensität einer 
+überlagerten Welle kann dann gemäß 
+\begin{equation}
+    I_\text{Ges} = 2 \text{const}\vec{E}_0^2(1 + \cos(\delta_2 - \delta_1))
+\end{equation}
+berechnet werden. Der hier auftretende Cosinus-Term wird Interferenzterm genannt. Dieser Term beschreibt das Interferenzverhalten der überlagerten Wellen. Aus den Eigenschaften
+der Cosinus-Funktion folgt, dass der Interferenzterm einen Beitrag liefern kann, welcher größer als der Mittelwert selbst ist. Außerdem kann der Interferenzterm an den 
+Nullstellen des Cosinus auch verschwinden. 
 
-\cite{sample}
+\subsection{Kohärenz}
+\label{subsec:Kohärenz}
