--- a/v401/content/theorie.tex
+++ b/v401/content/theorie.tex
@@ -78,8 +78,8 @@ Gangunterschied $b\Delta n$. Daraus ergibt sich dann über die Maximabedingung d
 
 \subsection{Abhängikeit des Brechungsindex vom Druck}
 \label{subsec:Brechungsindex}
-Im folgendem wird angenommen, dass Luft zwischen $\qty{0}{\bar}$ und $\qty{1}{\bar}$ sich wie ein ideales Gas verhält. Aus der idealen Gasgleichung kann der Brechungsindex in
-Abhängikeit vom Druck $p$ gemäß 
+Im folgendem wird angenommen, dass Luft zwischen $\qty{0}{\bar}$ und $\qty{1}{\bar}$ sich wie ein ideales Gas verhält. Aus der idealen Gasgleichung kann die Anzahl der Moleküle
+in Abhängikeit vom Druck $p$ ud der Temperatur $T$ gemäß 
 \begin{equation*}
     N(p,T) = \frac{p}{T}\frac{T_0}{p_0}N_\text{L}
 \end{equation*}
