--- a/v401/content/diskussion.tex
+++ b/v401/content/diskussion.tex
@@ -1,2 +1,23 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Im ersten Teil des Versuches wurde mit Hilfe eines Michelson-Interferometers die Wellenlänge eines Laser bestimmt. Dabei ergaben sich die Schwierigkeiten, dass die Photokathode 
+nicht von der Umgebung abgeschirmt gewesen ist. Daher können äußere Schatten zu einer erhöhten Zählrate führen. Außerdem kann es geschehen, dass aufgrund der 
+Motorgeschwindigkeit die Photokathode nicht alle Maxima registriert und somit die Zählrate leicht abweicht. 
+Die Wellenlänge des Lasers wurde zu $\lambda_\text{exp} = \qty{661 +- 5}{\nano\metre}$ bestimmt. Nach Angabe des Herstellers soll der Laser eine Wellenlänge von
+$\lambda_\text{theo} = \qty{635}{\nano\metre}$ haben.
+Daher ergibt sich gemäß 
+\begin{equation*}
+    \Delta\lambda = 100\frac{\lvert \lambda_\text{exp} - \lambda_\text{theo}\rvert}{\lambda_\text{theo}}
+\end{equation*}
+eine Abweichung der Wellenlänge von $\Delta\lambda = 4.05\%$.
+
+Im zweiten Teil des Versuches sollte mit dem selben Aufbau der Brechungsindex von Luft bestimmt werden. Bei dieser Messung liegen mögliche Quellen für Abweichungen in der Dichte
+der Apparatur. Außerdem kann durch händisches Pumpen nicht bei jeder Messung der gleiche Druck eingestellt werden. Ebenfalls gelten die Formeln zur Berechnung des Brechungsindex
+nur genähert für ideale Gase unter Normalbedingungen, weshalb eine Abweichung auftreten muss. Hinzu kommen ebenfalls die selben Fehlerquellen des ersten 
+Teils des Versuches.
+Der Brechungsindex von Luft wurde mit diesem Experiment zu $n_\text{Luft} = 1.000474 \pm 0.000072$ bestimmt. Da kein Brechungsindex mit den verwendeten Bedinungen in der 
+Literatur gefunden werden kann, lässt sich lediglich sagen, dass der experimentell bestimmte Wert in eine realistischen Größenordnung liegt und somit als qualitativ
+angenommen werden kann.
+
+Die geringe Abweichung im ersten Versuch deutet auf die hohe Präzesion des Michelson-Interferometers hin. Die Abweichung liegen vermutlich eher an der Photokathode und den 
+äußeren Einflüssen. 
