--- a/v401/content/theorie.tex
+++ b/v401/content/theorie.tex
@@ -72,7 +72,7 @@ Bei einem Michelson-Interferometer kann ein Gangunterschied allerdings nicht aus
 durch einen veränderten Brechungsindex in einem der Arme entstehen. Läuft ein Strahl entlang einer Länge $b$ einen Brechungsindex $n + \Delta n$, entsteht dabei
 Gangunterschied $b\Delta n$. Daraus ergibt sich dann über die Maximabedingung der Zusammenhang  
 \begin{equation}
-    \label{eqn:Brechungsindex}
+    \label{eqn:Delta_n}
     \Delta n = \frac{z\lambda}{2b}.
 \end{equation}
 
@@ -91,6 +91,6 @@ Damit kann nun die Änderung des Brechungsindex durch
 berechnet werden.
 Betrachtet man den Brechungsindex nun unter Normalbedingungen lautet der Brechungsindex 
 \begin{equation}
-    \label{eqn:Brechungsindex_Theorie}
+    \label{eqn:Brechungsindex}
     n(p_0, T_0) = 1 + \Delta n(p,p')\frac{T}{T_0}\frac{p_0}{p - p'}.
 \end{equation}
